gitops/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-webapi
  labels:
    app.kubernetes.io/name: demo-webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: demo-webapi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: demo-webapi
    spec:
      containers:
        - name: demo-webapi
          image: demo-webapi:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /api/ping
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/ping
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
