gitops/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-webapi
  labels:
    app.kubernetes.io/name: demo-webapi
spec:
  to:
    kind: Service
    name: demo-webapi
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
